[package]
name = "CryptoMailServer"
version = "0.1.0"
authors = ["Ford Smith <fordmsmith13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.123", features = ["derive"] }
